--- a/addons/sase/views/menu.xml
+++ b/addons/sase/views/menu.xml
@@ -12,15 +12,30 @@
         <field name="res_model">sase.situation</field>
         <field name="view_mode">list,form</field>
     </record>
+    <record id="action_window_sase_situation_running" model="ir.actions.act_window">
+        <field name="res_model">sase.situation</field>
+        <field name="view_mode">list,form</field>
+        <field name="domain">[('state', 'in', ['running','draft'])]</field>
+        <field name="name">Situations en cours</field>
+    </record>
     <record id="action_window_sase_service_all" model="ir.actions.act_window">
         <field name="res_model">sase.service</field>
+        <field name="view_mode">list,form</field>
+    </record>
+    <record id="action_window_sase_intervenant_all" model="ir.actions.act_window">
+        <field name="res_model">sase.intervenant</field>
         <field name="view_mode">list,form</field>
     </record>
 
     <!-- MENU ITEMS -->
     <menuitem id="menu_sase" name="SASE" sequence="10">
         <menuitem id="menu_sase_enfant" name="Enfants" sequence="10" action="action_window_sase_enfant_all" />
-        <menuitem id="menu_sase_situation" name="Situations" sequence="20" action="action_window_sase_situation_all" />
+        <menuitem id="menu_sase_situation" name="Situations" sequence="20">
+            <menuitem id="menu_sase_situation_running" name="Situations en cours" sequence="20" action="action_window_sase_situation_running" />
+            <menuitem id="menu_sase_situation_all" name="Situations (toutes)" sequence="20" action="action_window_sase_situation_all" />
+
+        </menuitem>
+        <menuitem id="menu_sase_intervenant" name="Intervenants" sequence="40" action="action_window_sase_intervenant_all" />
         <menuitem id="menu_sase_service" name="Services" sequence="30" action="action_window_sase_service_all" />
 
     </menuitem>
