--- a/addons/sase/views/views_service.xml
+++ b/addons/sase/views/views_service.xml
@@ -1,33 +1,39 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <odoo>
+
+    <!-- LIST VIEW -->
     <record id="view_list_service" model="ir.ui.view">
         <field name="name">sase.service.list</field>
         <field name="model">sase.service</field>
         <field name="arch" type="xml">
-            <list>
-                <field name="nom" />
-                <field name="nb_places_reservees" />
-                <field name="nb_places_occupees" />
-
+            <list decoration-danger="delta_nb_places > 0" decoration-success="delta_nb_places == 0" decoration-warning="delta_nb_places &lt; 0">
+                <field name="nom" width="200px" />
+                <field name="nb_places_occupees" sum="Total" width="20px" />
+                <field name="nb_places_reservees" sum="Total" width="20px" />
+                <field name="nb_places_allouees" sum="Total" width="20px" />
+                <field name="delta_nb_places" width="20px" />
             </list>
         </field>
     </record>
 
+    <!-- FORM VIEW -->
     <record id="view_form_service" model="ir.ui.view">
         <field name="name">sase.service.form</field>
         <field name="model">sase.service</field>
         <field name="arch" type="xml">
             <form>
-                <header>
-                    <button name="compute_nb_places_occupees" type="object" string="Calculer" class="btn-primary" />
-
-                </header>
                 <sheet>
                     <group>
                         <field name="nom" />
-                        <field name="employe_ids" widget="many2many_tags" />
-                        <field name="nb_places_reservees" />
-                        <field name="nb_places_occupees" />
+                        <field name="employe_ids" widget="many2many_list">
+                            <list editable="bottom">
+
+                                <field name="titre" />
+                                <field name="nom" />
+                                <field name="is_directeur" />
+                            </list>
+                        </field>
+                        <field name="nb_places_allouees" />
                     </group>
 
                 </sheet>
