--- a/addons/sase/views/menu.xml
+++ b/addons/sase/views/menu.xml
@@ -26,6 +26,10 @@
         <field name="res_model">sase.intervenant</field>
         <field name="view_mode">list,form</field>
     </record>
+    <record id="action_window_sase_rapports_all" model="ir.actions.act_window">
+        <field name="res_model">sase.rapport</field>
+        <field name="view_mode">list</field>
+    </record>
 
     <!-- MENU ITEMS -->
     <menuitem id="menu_sase" name="SASE" sequence="10">
@@ -35,8 +39,10 @@
             <menuitem id="menu_sase_situation_all" name="Situations (toutes)" sequence="20" action="action_window_sase_situation_all" />
 
         </menuitem>
-        <menuitem id="menu_sase_intervenant" name="Intervenants" sequence="40" action="action_window_sase_intervenant_all" />
-        <menuitem id="menu_sase_service" name="Services" sequence="30" action="action_window_sase_service_all" />
+        <menuitem id="menu_sase_intervenant" name="Intervenants" sequence="30" action="action_window_sase_intervenant_all" />
+        <menuitem id="menu_sase_rapports" name="Rapports" sequence="40" action="action_window_sase_rapports_all" />
+
+        <menuitem id="menu_sase_service" name="Services" sequence="70" action="action_window_sase_service_all" />
 
     </menuitem>
 
