Ajout de nouveaux champs et filtres : tri des enfants par nom, prénom et date de naissance, ajout d'un genre non binaire, ajout de situations associées aux services, et ajout d'un filtre pour afficher les situations actives et inactives.

--- a/addons/sase/views/views_service.xml
+++ b/addons/sase/views/views_service.xml
@@ -34,6 +34,9 @@
                             </list>
                         </field>
                         <field name="nb_places_allouees" />
+                        <field name="situation_ids" widget="many2many_list" options="{'create': False,'delete':False}" string="Situations">
+
+                        </field>
                     </group>
 
                 </sheet>
